tests/test_input_files/good/test_good_array_14.punkt
main {
	const A = [""].
	println 'h', 'e', 'y', A.
}
