tests/test_input_files/bad/test_bad_array_19.punkt
main {
	const A = [1, true, "hello"].
}
